--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Variáveis de Ambiente 
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
