--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
 DB_URL=jdbc:mysql://db:3306/A3_sistemas?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo&createDatabaseIfNotExist=true
 DB_USERNAME=root
 DB_PASSWORD=Mom3040#
+
+MYSQL_ROOT_PASSWORD=Mom3040#
+MYSQL_DATABASE=A3_sistemas
